# unit_test_guide

./: README.md  pyproject.toml
src/: custom_errors.py  fib_number_generator.py  main.py
src/functions/: cool_function.py
src/functions/tests/: test_cool_function.py
src/tests/: test_main.py
src/utils/: auxiliary_utils.py
src/utils/tests/: test_auxilliary_utils.py
