[tool.poetry]
name = "unit-test-guide"
version = "0.1.0"
description = "Guide for unit testing"
authors = ["Jakobus51 <jakob.damen@outlook.com>"]
readme = "README.md"
packages = [{include = "unit_test_guide"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pandas = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
